--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <h2>Projects</h2>
                 <div class="projects-grid">
                     <div id="project1" class="project-tile">
-                        <a class="project-link" target="_blank" href="https://codepen.io/azzyeu/full/dyZGZZR">Bill Gates Tribute Page</a>
+                        <a class="project-link" href="/projects/tribute/index.html">Bill Gates Tribute Page</a>
                     </div>
                     <div id="project2" class="project-tile">
-                        <a class="project-link" target="_blank" href="https://codepen.io/azzyeu/full/bGYpbGe">Survey Form</a>
+                        <a class="project-link" target="_blank" href="/projects/survey_form/index.html">Survey Form</a>
                     </div>
                     <div id="project3" class="project-tile">
-                        <a class="project-link" target="_blank" href="https://codepen.io/azzyeu/full/ExbyPVy">Piano Product Landing Page</a>
+                        <a class="project-link" target="_blank" href="/projects/product_landing/index.html">Piano Product Landing Page</a>
                     </div>
                     <div id="project4" class="project-tile">
-                        <a class="project-link" target="_blank" href="https://codepen.io/azzyeu/full/VwrjQmg">Python Technical Documentation</a>
+                        <a class="project-link" target="_blank" href="/projects/technical_documentation/index.html">Python Technical Documentation</a>
                     </div>
                     <div id="project5" class="project-tile">
                         <a class="project-link" href="#">Dijkstra's Algorithm (WIP)</a>
