--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                         <a class="project-link" href="/projects/tribute/index.html">Bill Gates Tribute Page</a>
                     </div>
                     <div id="project2" class="project-tile">
-                        <a class="project-link" target="_blank" href="/projects/survey_form/index.html">Survey Form</a>
+                        <a class="project-link" href="/projects/survey_form/index.html">Survey Form</a>
                     </div>
                     <div id="project3" class="project-tile">
-                        <a class="project-link" target="_blank" href="/projects/product_landing/index.html">Piano Product Landing Page</a>
+                        <a class="project-link" href="/projects/product_landing/index.html">Piano Product Landing Page</a>
                     </div>
                     <div id="project4" class="project-tile">
-                        <a class="project-link" target="_blank" href="/projects/technical_documentation/index.html">Python Technical Documentation</a>
+                        <a class="project-link" href="/projects/technical_documentation/index.html">Python Technical Documentation</a>
                     </div>
                     <div id="project5" class="project-tile">
                         <a class="project-link" href="#">Dijkstra's Algorithm (WIP)</a>
