added linkedin contact

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
                 <h2>Projects</h2>
                 <div class="projects-grid">
                     <div id="project1" class="project-tile">
-                        <a class="project-link" href="/projects/tribute/index.html">Bill Gates Tribute Page</a>
+                        <a class="project-link" href="/projects/tribute/index.html">Tribute Page</a>
                     </div>
                     <div id="project2" class="project-tile">
                         <a class="project-link" href="/projects/survey_form/index.html">Survey Form</a>
                     </div>
                     <div id="project3" class="project-tile">
-                        <a class="project-link" href="/projects/product_landing/index.html">Piano Product Landing Page</a>
+                        <a class="project-link" href="/projects/product_landing/index.html">Product Landing
+                            Page</a>
                     </div>
                     <div id="project4" class="project-tile">
-                        <a class="project-link" href="/projects/technical_documentation/index.html">Python Technical Documentation</a>
+                        <a class="project-link" href="/projects/technical_documentation/index.html">Technical
+                            Documentation</a>
                     </div>
                     <div id="project5" class="project-tile">
                         <a class="project-link" href="#">Dijkstra's Algorithm (WIP)</a>
@@ -40,7 +42,12 @@
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <a id="profile-link" href="https://github.com/Azzyeu" target="_blank"><img id="icon" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
+                <div id="profile-links">
+                    <a class="profile-link" href="https://github.com/Azzyeu" target="_blank"><img class="icon"
+                            src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
+                    <a class="profile-link" href="https://www.linkedin.com/in/azam-butt" target="_blank"><img
+                            class="icon" src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt=""></a>
+                </div>
             </section>
         </main>
     </div>
